2006-9-20   fabian

    * Cleaned the code. Removed ITSessionMgr class. Improved stability.
    
2006-9-18   fabian

    * Added UI for allowing users to adjust the display refreshing rate.
    * Added supprot for dragging a window's only tab to join another window.
    * Changed tab ordering behavior. Now the tabs are no longer sorted by the order of their creation.
    * Fixed wrong bookmark draw bug.
        
2006-9-16   fabian

    * Fixed another resize bug
    * Fixed a scrolling bug
    * Added support for escape codes that changes window size (Crashes in the vttest's xterm resizing
      test because of the fast resizing request).
    
2006-9-15   fabian

    * Fixed the close button not working bug.
    * Fixed the wrong tab location after resizing bug.
    * Added support for dragging a tab outside of a window to create a new window.
    * Now allows tab size to be changed dynamically.
    
2006-9-14   fabian

    * Partly fixed the window resize bug. Now the cursor will be at the location. But the frame size
      isn't entirely correct under all conditions yet.
      
2006-9-13   fabian

    * Incorporated Growl branch into the main branch
    * Added support for a new iTerm-specific escape sequence:
        ESC ]9;string^G
      This sends an alert with specified string via Growl.
    * Added growl related strings into iTerm.string for future translations.
    * A temporary fix to the window resize bug.

2006-09-11  fabian

    * Fixed a bug that fails to refresh background windows when TAB settings are changed.
    
2006-09-07  fabian

    * removed controller in PTYSession. Now a PTYSession is directly binded to NSTabViewItem objects.
      This is because PSMTabBarControl works this way.
    * Fixed tab images when dragging.
    * Re-implemented contentual menu for the tab.
    * Fixed a memory leak.
    
2006-09-06  fabian

    * Added a lock to PSMTabBarControl to avoid crashes.
    * Fixed a blinking timing bug found by Roine Gusatfsson.
    